@@ -1,6 +1,6 @@
-These are instructions on how to run the examples for PWCOND package.
+These are instructions on how to run the examples for CP package.
 These examples try to exercise all the programs and features
-of the PWCOND package.
+of the CP package.
 If you find that any relevant feature isn't being tested,
 please contact us (or even better, write and send us a new example).
 
@@ -28,11 +28,11 @@ To run the examples, you should follow this procedure:
    and PARA_POSTFIX variables (in the "environment_variables" file).
    Parallel executables will be run by a command like this:
 
-     $PARA_PREFIX pw.x $PARA_POSTFIX < file.in > file.out
+     $PARA_PREFIX cp.x $PARA_POSTFIX < file.in > file.out
 
    For example, if the command line is like this (as for an IBM SP):
 
-     poe pw.x -procs 4 < file.in > file.out
+     poe cp.x -procs 4 < file.in > file.out
 
    you should set PARA_PREFIX="poe", PARA_POSTFIX="-procs 4".
 
@@ -47,7 +47,7 @@ To run the examples, you should follow this procedure:
 
      ./run_example
 
-   (except for example 21, see below)
+   (except for example 04, see below)
    This will create a subdirectory "results", containing the input and
    output files generated by the calculation.
 
