@@ -140,7 +140,7 @@ cp_restart.o : ../../iotk/src/iotk_module.o
 cp_restart.o : cp_interfaces.o
 cp_restart.o : energies.o
 cp_restart.o : gvecw.o
-cp_restart.o : ldaU.o
+cp_restart.o : ldaU_cp.o
 cp_restart.o : mainvar.o
 cp_restart.o : wannier_base.o
 cplib.o : ../../Modules/atom.o
@@ -219,7 +219,7 @@ cpr.o : ensemble_dft.o
 cpr.o : gvecw.o
 cpr.o : ions_nose.o
 cpr.o : ions_positions.o
-cpr.o : ldaU.o
+cpr.o : ldaU_cp.o
 cpr.o : mainvar.o
 cpr.o : modules.o
 cpr.o : ortho_base.o
@@ -255,7 +255,7 @@ dealloc.o : gvecw.o
 dealloc.o : ions_nose.o
 dealloc.o : ions_positions.o
 dealloc.o : ksstates.o
-dealloc.o : ldaU.o
+dealloc.o : ldaU_cp.o
 dealloc.o : ldaUpen.o
 dealloc.o : mainvar.o
 dealloc.o : modules.o
@@ -467,7 +467,7 @@ init_run.o : ensemble_dft.o
 init_run.o : gvecw.o
 init_run.o : ions_nose.o
 init_run.o : ions_positions.o
-init_run.o : ldaU.o
+init_run.o : ldaU_cp.o
 init_run.o : mainvar.o
 init_run.o : modules.o
 init_run.o : ortho_base.o
@@ -529,7 +529,7 @@ input.o : electrons_nose.o
 input.o : ensemble_dft.o
 input.o : ions_nose.o
 input.o : ksstates.o
-input.o : ldaU.o
+input.o : ldaU_cp.o
 input.o : ldaUpen.o
 input.o : mainvar.o
 input.o : pres_ai_mod.o
@@ -560,21 +560,25 @@ ldaU.o : ../../Modules/io_global.o
 ldaU.o : ../../Modules/ions_base.o
 ldaU.o : ../../Modules/kind.o
 ldaU.o : ../../Modules/mp.o
+ldaU.o : ../../Modules/mp_bands.o
 ldaU.o : ../../Modules/mp_global.o
-ldaU.o : ../../Modules/parameters.o
+ldaU.o : ../../Modules/mp_pools.o
 ldaU.o : ../../Modules/recvec.o
 ldaU.o : ../../Modules/uspp.o
 ldaU.o : cp_interfaces.o
 ldaU.o : gvecw.o
 ldaU.o : ldaU_cp.o
 ldaU.o : ldaUpen.o
-ldaUpen.o : ldaU_cp.o
+ldaU_cp.o : ../../Modules/constants.o
+ldaU_cp.o : ../../Modules/kind.o
+ldaU_cp.o : ../../Modules/parameters.o
 ldaUpen.o : ../../Modules/constants.o
 ldaUpen.o : ../../Modules/dspev_drv.o
 ldaUpen.o : ../../Modules/electrons_base.o
 ldaUpen.o : ../../Modules/ions_base.o
 ldaUpen.o : ../../Modules/kind.o
 ldaUpen.o : gvecw.o
+ldaUpen.o : ldaU_cp.o
 mainvar.o : ../../Modules/cell_base.o
 mainvar.o : ../../Modules/control_flags.o
 mainvar.o : ../../Modules/descriptors.o
@@ -877,7 +881,7 @@ runcp.o : ../../Modules/wave_base.o
 runcp.o : cp_interfaces.o
 runcp.o : efield.o
 runcp.o : gvecw.o
-runcp.o : ldaU.o
+runcp.o : ldaU_cp.o
 runcp.o : wannier.o
 smallbox.o : ../../Modules/constants.o
 smallbox.o : ../../Modules/io_global.o
@@ -950,7 +954,7 @@ vofrho.o : ../../Modules/xc_rVV10.o
 vofrho.o : ../../Modules/xc_vdW_DF.o
 vofrho.o : cp_interfaces.o
 vofrho.o : energies.o
-vofrho.o : ldaU.o
+vofrho.o : ldaU_cp.o
 vofrho.o : modules.o
 vofrho.o : pres_ai_mod.o
 vofrho.o : smallbox_gvec.o
